--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "body-parser": "^1.9.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
-    "method-override": "^2.3.0"
+    "method-override": "^2.3.0",
+    "mysql": "^2.6.1"
   },
   "homepage": "https://github.com/DCKT/express-boilerplate"
 }
