--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node server.js"
+    "start": "babel-node server.js",
+    "new:route": "babel-node tasks/newRoute.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,8 @@
     "method-override": "^2.3.0",
     "mysql": "^2.6.1"
   },
-  "homepage": "https://github.com/DCKT/express-boilerplate"
+  "homepage": "https://github.com/DCKT/express-boilerplate",
+  "devDependencies": {
+    "node-fetch": "^1.0.6"
+  }
 }
