--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node server.js",
-    "new:route": "babel-node tasks/newRoute.js"
+    "new": "babel-node tasks/new.js"
   },
   "repository": {
     "type": "git",
