--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/nodemon -w server.js --harmony_destructuring",
+    "start": "./node_modules/.bin/nodemon -w ./ --harmony_destructuring",
     "new": "node tasks/new.js --harmony_destructuring"
   },
   "repository": {
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.9.0",
     "express": "~4.9.0",
+    "express-session": "^1.11.3",
     "jade": "~1.6.0",
     "method-override": "^2.3.0",
     "mysql": "^2.6.1"
