--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "body-parser": "^1.9.0",
+    "compression": "^1.5.2",
     "express": "~4.9.0",
     "express-session": "^1.11.3",
     "jade": "~1.6.0",
